lanecwe-Prod/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>CEA_Date_Active__c</fullName>
        <description>The date that shows the most recent Contract End/Anniversary Date.  This shows the Original CEA Date before renewal and once renewed the current CEA Date.</description>
        <inlineHelpText>This shows the Original CEA Date before renewal and once renewed the current CEA Date.  This will be set upon initial entry of the CEA Date - Original value.  *For manual renewals, please set this to the new CEA Date for man. renewal.</inlineHelpText>
        <label>CEA Date - Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEA_Date_Original__c</fullName>
        <description>To replace the current field</description>
        <inlineHelpText>This is the Original Contract/End Anniversary Date for this Contract.  This should never change once it has been entered to the system.</inlineHelpText>
        <label>CEA Date - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEA_Date_Prior_to_Renewal__c</fullName>
        <description>The Contract End/Anniversary Date before the last renewal occurred.</description>
        <inlineHelpText>The Contract End/Anniversary Date before the last renewal occurred.  This will be set automatically when auto-renewed.  *For manual renewals please set this value to the old CEA Date - Original value.</inlineHelpText>
        <label>CEA Date - Prior to Renewal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Minimum_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Minimum Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Rounding_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Rounding Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Setup_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Setup Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notice__c</fullName>
        <label>Cancellation Notice</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>TEXT(Opportunity.Owner_Copy__r.Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_For_Approver__c</fullName>
        <label>Comments for Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>X_LFR_Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Reference__c</fullName>
        <label>Company Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Tax_Reference__c</fullName>
        <label>Company Tax Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Tax__c</fullName>
        <label>x_LFR_Company Tax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tesla Company Name</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adobe Amend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy for Reporting Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Customer Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Subscription License Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services &amp; Pricing Schedule – Customer Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription License Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription License Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webex Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx Amend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Software Services Agreement</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Company_name__c</fullName>
        <label>x_LFR_Company Name [for Contract]</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Anniversary_Date_2__c</fullName>
        <label>Contract End/Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Anniversary_Date__c</fullName>
        <label>Contract End/Anniversary Date_Rollup</label>
        <summarizedField>QuoteLineItem.Expiration_Date_Copy__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <description>might merge with Termination Date, need to get further requirements first.  will use to house this date when automation sets the Status to Expired for non auto-renewals.</description>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>X_LFR_Contract Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Source__c</fullName>
        <inlineHelpText>If selecting Other a lot and you want a new value added please reach out to the system administrator by clicking on the Submit a Case button on the left side of the screen.</inlineHelpText>
        <label>Contract Source</label>
        <picklist>
            <picklistValues>
                <fullName>Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docusign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Document Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Status_Reason__c</fullName>
        <label>Contract Status Reason</label>
        <picklist>
            <picklistValues>
                <fullName>letter/email received from customer to Terminate Services for Adobe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>letter/email received from customer to Terminate Services for Webex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>letter/email received from customer to Terminate Services for Lync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>letter/email received from customer to Terminate Services for Live Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>letter/email received from customer to Terminate Services for Globalmeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>letter/email received from customer to Terminate Services for iMeet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Volume_Period__c</fullName>
        <inlineHelpText>Agreement Volume Period (NS name)</inlineHelpText>
        <label>Contract Volume Period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contrct_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>X_LFR_Contract Number#</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Deal_Line_Items__c</fullName>
        <inlineHelpText>Shows total top level Packages related to the Q/C Mgmt record</inlineHelpText>
        <label>Total Packages</label>
        <summaryFilterItems>
            <field>QuoteLineItem.IsServiceProduct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Notes__c</fullName>
        <label>Count of Notes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_contract_not_supported_SFDC__c</fullName>
        <description>Used to define workflow rules, etc.</description>
        <label>Count of contract_not_supported_SFDC</label>
        <summaryFilterItems>
            <field>QuoteLineItem.contract_not_supported_SFDC_text__c</field>
            <operation>equals</operation>
            <value>yes</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountofQuote__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows the total number of attachments related to the Q/C record.  1 = Contract Generated; 1+ = Final Contract Generated.</inlineHelpText>
        <label>Total Contract Documents</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Created to extract date value from created date for quote document</description>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencySymbol__c</fullName>
        <formula>IF(TEXT(CurrencyIsoCode) = &quot;USD&quot;,&quot;$&quot;, 
IF(TEXT(CurrencyIsoCode) = &quot;EUR&quot;,&quot;€&quot;, 
IF(TEXT(CurrencyIsoCode) = &quot;JPY&quot;,&quot;¥&quot;, 
IF(TEXT(CurrencyIsoCode) = &quot;GBP&quot;,&quot;£&quot;, 
TEXT(CurrencyIsoCode)) 
&amp; &quot; &quot; 
&amp; TEXT(NBp__c) 
&amp; CASE( LEN(TEXT(NBp__c)) - FIND( &quot;.&quot;, TEXT(NBp__c)), LEN(TEXT(NBp__c)), &quot;.00&quot;, 1, &quot;0&quot;, &quot;&quot; )
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrencySymbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSignature__c</fullName>
        <label>Final Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Signature_Type__c</fullName>
        <label>Customer Signature Type</label>
        <picklist>
            <picklistValues>
                <fullName>eSignature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_The_Contract_Was_Amended__c</fullName>
        <label>x-Date The Contract Was Amended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Service_Commencement_Date__c</fullName>
        <inlineHelpText>Set this if you need to delay the Service Commencement Date as related to Company Initiation (CIF)</inlineHelpText>
        <label>Desired Service Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Quote/Contract Mgmt</relationshipLabel>
        <relationshipName>Quote_Contract_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Envelope_Status__c</fullName>
        <formula>DocuSign_Status__r.dsfs__Envelope_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eSignature Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <description>Close Date from Opportunity</description>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirationDateQuoteDocumennt__c</fullName>
        <formula>TODAY() +30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExpirationDateQuoteDocumennt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_Additional_c__c</fullName>
        <description>This fields holds a legacy reference to Contracts documents - sourced from Netsuite Migration 21st March 2013</description>
        <externalId>true</externalId>
        <inlineHelpText>NS Generated ID; File Store ID</inlineHelpText>
        <label>X_File Store Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Provisioning__c</fullName>
        <inlineHelpText>The Fax number that will be provisioned into Tesla.</inlineHelpText>
        <label>Fax (Provisioning)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>File_Store_Contract_Status__c</fullName>
        <label>Contract Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated Company/No Termination Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superseded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Contract_Status__c</fullName>
        <description>Used by NA contract team to set final contract Status values</description>
        <inlineHelpText>Migrated Contract - Andy set to Completed with final data check
Not Started – When record is first created/OR by rep
Awaiting Response – emailed rep, etc.
Automated Contract - Needs QC – set by DS automation
Completed – Approved/completed</inlineHelpText>
        <label>Final Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated Contract - Needs QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generate_CIF_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only for Opp Types of New Logo at this time.</inlineHelpText>
        <label>Generate CIF Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Government_Entity_Customer__c</fullName>
        <label>Government Entity (Customer)</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Government_Opportunity_Inside_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Government Opportunity (Inside Sales) Populated from Opportunity</description>
        <inlineHelpText>Government Opportunity (Inside Sales) Populated from Opportunity</inlineHelpText>
        <label>Government Opportunity (Inside Sales)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <formula>TotalPrice__c  +  ShippingHandling  +  Tax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrandTotal__c</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InterestPenaltyPercent__c</fullName>
        <label>Interest Penalty Percent</label>
        <picklist>
            <controllingField>PaymentTerms__c</controllingField>
            <picklistValues>
                <fullName>0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InternalSignature__c</fullName>
        <description>to be deleted as changing how these work.</description>
        <label>X_LFR_Internal Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Signature_Type__c</fullName>
        <label>Internal Signature Type</label>
        <picklist>
            <picklistValues>
                <fullName>eSignature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Signer_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for WF Rule to Opp Owner</description>
        <inlineHelpText>When this is checked the eSignature Contract has been signed Internally.</inlineHelpText>
        <label>Internal Signer Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMinimumContractType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Minimum Contract Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValidBidPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid BidPrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Premiere_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Premiere the Incumbent Supplier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Same_as_Contract_Deal_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Signer Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Same_as_the_Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as the Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Opportunity.Owner_Copy__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lync_Minutes__c</fullName>
        <label>Lync Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Contract_ID__c</fullName>
        <formula>&quot;PGI_Contract__r.Contract_ID__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X_LFR_Master Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Contract_Expiration__c</fullName>
        <description>A roll-up based on the Expiration Date-Copy - very similar to the Contract End/Anniversary Date but use the MIN instead of MAX when calculating.</description>
        <inlineHelpText>A roll-up based on the Expiration Date-Copy - very similar to the Contract End/Anniversary Date but use the MIN instead of MAX when calculating.</inlineHelpText>
        <label>Min Contract Expiration</label>
        <summarizedField>QuoteLineItem.Expiration_Date_Copy__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinimumContractLength__c</fullName>
        <label>X_LFR_Min Contract Length</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Committment_Value__c</fullName>
        <label>Minimum Committment Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Contract_Value__c</fullName>
        <label>X_Minimum Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_to_Month_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Month to Month Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NBp__c</fullName>
        <label>NBp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NS_Agreement_Vol_Period__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Agreement Vol Period</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Agreement_Volume__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Agreement Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NS_Auto_Renew_Interval__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Auto Renew Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NS_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temp for migration data analysis</description>
        <label>NS Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_Auto_Renewal_Interval_Match_to_NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;, */
IF( 
ISBLANK(NS_Auto_Renew_Interval__c ), &quot;No value for Auto Renew Interval in NS&quot;, 
IF( 
SC_Auto_renewal_Interval_in_months__c  = NS_Auto_Renew_Interval__c , &quot;Match&quot;, 
&quot;Not a Match&quot; 
) 
) 
)</formula>
        <label>NS_Auto-Renewal Interval Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Auto_Renewal_Match_to_NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;, */
IF( 
SC_Auto_Renewal__c  = NS_Auto_Renew__c, &quot;Match&quot;, 
&quot;Not a Match&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS_Auto_Renewal Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_CEA_Date_Match_to_NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c &lt;&gt; &quot;Not Active&quot;, &quot;Active&quot;, */
IF( 
ISBLANK(NS_CEA_Date__c ), &quot;No value for CEA Date in NS&quot;, 
IF(
ISBLANK( SC_Initial_Contract_Term_in_months__c ), &quot;No Value for Initial Term in NS&quot;,
/*IF( 
Contract_End_Anniversary_Date_2__c = NS_CEA_Date__c , &quot;Match&quot;, */
IF( 
 NS_CEA_Date__c =   CEA_Date_Original__c, &quot;Match&quot;,
&quot;Not a Match&quot; 
) 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS_CEA Date Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_CEA_Date__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS CEA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NS_Calculated_CEA_Date__c</fullName>
        <label>NS Calculated CEA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NS_Calculated_TCV_value__c</fullName>
        <description>NS_Agreement_Volume__c</description>
        <formula>IF(
 ISBLANK(External_ID__c), -1111111.19,
IF(
NS_GM_IM_TCV__c &gt; 0, NS_GM_IM_TCV__c,
IF(
NS_Agreement_Vol_Period__c = &quot;Annually&quot;,  ((NS_Agreement_Volume__c / 12) *  NS_Initial_Term__c), 
IF(
 NS_Agreement_Vol_Period__c = &quot;Monthly&quot;, NS_Agreement_Volume__c * NS_Initial_Term__c, 
IF(
 NS_Agreement_Vol_Period__c = &quot;Quarterly&quot;, ((NS_Agreement_Volume__c / 3) *  NS_Initial_Term__c),
IF(
 NS_Agreement_Vol_Period__c = &quot;Semi-annually&quot;, ((NS_Agreement_Volume__c / 6) *  NS_Initial_Term__c),
IF(
 NS_Agreement_Vol_Period__c = &quot;Term of Contract&quot;, NS_Agreement_Volume__c ,
IF(
 NS_Agreement_Vol_Period__c = &quot;One-Time&quot;, NS_Agreement_Volume__c , 
-999999.91
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS Calculated TCV value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NS_Company_ID__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Company ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Contract_Doc_Status__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Contract Doc Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Contract_Type_Match_to_NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;, */
IF( 
ISBLANK(NS_Contract_Type__c ), &quot;No value in NS for Contract Type&quot;, 
IF( 
TEXT(ContractType__c) = NS_Contract_Type__c , &quot;Match&quot;, 
&quot;Not a Match&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS_Contract Type Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Contract_Type__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>